force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/WinaproachIncidentCauseIdMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Win@proach Incident CauseId Mapping</label>
</CustomObject>