force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application</label>
    <length>10</length>
    <type>Text</type>
</CustomField>