force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Change_request__c.field-meta.xml
<CustomField>
    <fullName>Change_request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change request</label>
    <length>10</length>
    <type>Text</type>
</CustomField>