force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Code_issues__c.field-meta.xml
<CustomField>
    <fullName>Code_issues__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code issues</label>
    <length>10</length>
    <type>Text</type>
</CustomField>