force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Data_security__c.field-meta.xml
<CustomField>
    <fullName>Data_security__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data security</label>
    <length>10</length>
    <type>Text</type>
</CustomField>