force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documentation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>