force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/EUM_SMC_only__c.field-meta.xml
<CustomField>
    <fullName>EUM_SMC_only__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EUM (SMC only)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>