force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Global_core_database__c.field-meta.xml
<CustomField>
    <fullName>Global_core_database__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global core database</label>
    <length>10</length>
    <type>Text</type>
</CustomField>