force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Hardware_part__c.field-meta.xml
<CustomField>
    <fullName>Hardware_part__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hardware part</label>
    <length>10</length>
    <type>Text</type>
</CustomField>