force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Not_reproducable__c.field-meta.xml
<CustomField>
    <fullName>Not_reproducable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not reproducable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>