force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other</label>
    <length>10</length>
    <type>Text</type>
</CustomField>