force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/PNR_discrepancy_SMC_only__c.field-meta.xml
<CustomField>
    <fullName>PNR_discrepancy_SMC_only__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR discrepancy (SMC only)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>