force-app/main/default/objects/WinaproachIncidentCauseIdMapping__c/fields/User_error__c.field-meta.xml
<CustomField>
    <fullName>User_error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User error</label>
    <length>10</length>
    <type>Text</type>
</CustomField>